[workspace]
resolver = "2"
members = [ "zenoh-bridge-dds", "zenoh-plugin-dds" ]

[workspace.package]
version = "0.11.0-dev-94-g519f7ea"
authors = [ "kydos <angelo@icorsaro.net>", "Esteve Fernandez <esteve.fernandez@gmail.com>", "Julien Enoch <julien@enoch.fr>", "Pierre Avital <pierre.avital@adlinktech.com>" ]
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-dds"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"

[workspace.dependencies]
async-liveliness-monitor = "0.1.1"
async-std = "=1.12.0"
async-trait = "0.1.66"
bincode = "1.3.3"
cdr = "0.2.4"
clap = "3.2.23"
derivative = "2.2.0"
flume = "0.11.0"
futures = "0.3.26"
git-version = "0.3.5"
hex = "0.4.3"
lazy_static = "1.4.0"
regex = "1.7.1"
rustc_version = "0.4"
serde = "1.0.154"
serde_json = "1.0.94"
tracing = "0.1"

[workspace.dependencies.cyclors]
version = "0.2.0"
git = "https://github.com/ZettaScaleLabs/cyclors.git"
branch = "master"

[workspace.dependencies.zenoh]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
features = [ "unstable" ]

[workspace.dependencies.zenoh-collections]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-core]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-ext]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
features = [ "unstable" ]

[workspace.dependencies.zenoh-plugin-rest]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[workspace.dependencies.zenoh-plugin-trait]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[workspace.dependencies.zenoh-util]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
default-features = false

[profile]
[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"