#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-bridge-dds"
version = "0.6.0-dev.0"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Esteve Fernandez <esteve.fernandez@gmail.com>",
    "Julien Enoch <julien@enoch.fr>",
    "Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2018"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-dds"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh plugin for ROS2 and DDS in general"

[dependencies]
clap = "3.2.12"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
serde_json = "1.0.71"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "master", features = ["unstable"] }
zenoh-plugin-rest = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "master", default-features = false }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh", branch = "master", default-features = false }
zplugin-dds = { path = "../zplugin-dds", default-features = false }

[dependencies.async-std]
version = "=1.12.0"
features = ["unstable", "attributes"]

[[bin]]
name = "zenoh-bridge-dds"
path = "src/main.rs"

[package.metadata.deb]
name = "zenoh-bridge-dds"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "$auto"
maintainer-scripts = ".deb"
assets = [
    # binary
    [
        "target/release/zenoh-bridge-dds",
        "/usr/bin/",
        "755",
    ],
    # config file
    [
        "../EXAMPLE_CONFIG.json5",
        "/etc/zenoh-bridge-dds/conf.json5",
        "644",
    ],
    # service
    [
        ".service/zenoh-bridge-dds.service",
        "/lib/systemd/system/zenoh-bridge-dds.service",
        "644",
    ],
]
