#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-bridge-dds"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = ["network-programming"]
description = "Zenoh bridge for ROS2 and DDS in general"
publish = false

[features]
dds_shm = ["zenoh-plugin-dds/dds_shm"]

[dependencies]
async-liveliness-monitor = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zenoh = { workspace = true, features = ["internal", "internal_config"] }
zenoh-config = { workspace = true }
zenoh-plugin-rest = { workspace = true }
zenoh-plugin-trait = { workspace = true }
zenoh-plugin-dds = { workspace = true }

[[bin]]
name = "zenoh-bridge-dds"
path = "src/main.rs"

[package.metadata.deb]
name = "zenoh-bridge-dds"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "$auto"
maintainer-scripts = ".deb"
assets = [
    # binary
    [
        "target/release/zenoh-bridge-dds",
        "/usr/bin/",
        "755",
    ],
    # config file
    [
        "../DEFAULT_CONFIG.json5",
        "/etc/zenoh-bridge-dds/conf.json5",
        "644",
    ],
    # service
    [
        ".service/zenoh-bridge-dds.service",
        "/lib/systemd/system/zenoh-bridge-dds.service",
        "644",
    ],
]
conf-files = ["/etc/zenoh-bridge-dds/conf.json5"]
