[package]
name = "zenoh-plugin-dds"
categories = [ "network-programming", "science::robotics" ]
description = "Zenoh plugin for ROS2 and DDS in general"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-plugin-dds"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = [ "../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-73-gf0ec0d1)"

[lib]
name = "zenoh_plugin_dds"
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "no_mangle" ]
no_mangle = []
dds_shm = [ "cyclors/iceoryx" ]
stats = [ "zenoh/stats" ]

[dependencies]
[dependencies.async-std]
workspace = true
features = [ "unstable", "attributes" ]

[dependencies.async-trait]
workspace = true

[dependencies.bincode]
workspace = true

[dependencies.cdr]
workspace = true

[dependencies.cyclors]
workspace = true

[dependencies.derivative]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.zenoh]
workspace = true

[dependencies.zenoh-collections]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-ext]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[dependencies.zenoh-util]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true