#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-plugin-dds"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = ["network-programming", "science::robotics"]
description = "Zenoh plugin for ROS2 and DDS in general"

[lib]
name = "zenoh_plugin_dds"
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []
dds_shm = ["cyclors/iceoryx"]
stats = ["zenoh/stats"]

[dependencies]
async-std = { workspace = true, features = ["unstable", "attributes"] }
async-trait = { workspace = true }
bincode = { workspace = true }
cdr = { workspace = true }
cyclors = { workspace = true }
derivative = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
git-version = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenoh-plugin-dds"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenohd (=1.0.0~alpha.2-1)"
