#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zplugin-dds"
version = "0.6.0-dev.0"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Esteve Fernandez <esteve.fernandez@gmail.com>",
	"Julien Enoch <julien@enoch.fr>",
	"Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2018"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-dds"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh plugin for ROS2 and DDS in general"

[lib]
name = "zplugin_dds"
crate-type = ["cdylib", "rlib"]

[features]
no_mangle = ["zenoh-plugin-trait/no_mangle"]
default = ["no_mangle"]

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh" }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh" }
zenoh-core = { git = "https://github.com/eclipse-zenoh/zenoh" }
zenoh-collections = { git = "https://github.com/eclipse-zenoh/zenoh" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh", default-features = false }
cyclors = "0.1.2"
log = "0.4.14"
async-trait = "0.1.42"
futures = "0.3.12"
flume = "0.10.8"
libc = "0.2.85"
clap = "2.33"
env_logger = "0.9.0"
git-version = "0.3.4"
regex = "1.4.3"
hex = "0.4.3"
lazy_static = "1.4.0"
serde = "1.0.125"
serde_json = "1.0.64"
bincode = "1.3.3"
derivative = "2.2.0"
cdr = "0.2.4"
shared_memory = "=0.12.0"

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]

[build-dependencies]
rustc_version = "0.4"
