#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zplugin-dds"
version = "0.6.0-dev.0"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Esteve Fernandez <esteve.fernandez@gmail.com>",
	"Julien Enoch <julien@enoch.fr>",
	"Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2018"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-dds"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh plugin for ROS2 and DDS in general"

[lib]
name = "zplugin_dds"
crate-type = ["cdylib", "rlib"]

[features]
no_mangle = ["zenoh-plugin-trait/no_mangle"]
default = ["no_mangle"]

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", branch ="api-changes", features = ["unstable"] }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh", branch ="api-changes", features = ["unstable"] }
zenoh-core = { git = "https://github.com/eclipse-zenoh/zenoh", branch ="api-changes" }
zenoh-collections = { git = "https://github.com/eclipse-zenoh/zenoh", branch ="api-changes" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh", branch ="api-changes", default-features = false }
cyclors = "0.1.4"
log = "0.4.17"
async-trait = "0.1.57"
futures = "0.3.24"
flume = "0.10.14"
env_logger = "0.9.1"
git-version = "0.3.5"
regex = "1.6.0"
hex = "0.4.3"
lazy_static = "1.4.0"
serde = "1.0.144"
serde_json = "1.0.85"
bincode = "1.3.3"
derivative = "2.2.0"
cdr = "0.2.4"

[dependencies.async-std]
version = "=1.12.0"
features = ["unstable", "attributes"]

[build-dependencies]
rustc_version = "0.4"

[package.metadata.deb]
name = "zenoh-plugin-dds"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenohd (=0.6.0~dev.0)"
